--- a/src/Styles/_variables.scss
+++ b/src/Styles/_variables.scss
@@ -4,6 +4,8 @@ $tertiaryColor: "#63D3C5";
 $quaternaryColor: "#717171";
 $quinaryColor: "#4D4D4D";
 $btnColor: "#3458EB";
+$primaryFont: 'Mulish', sans-serif;
+$secondaryFont: 'Inter', sans-serif;
 $primaryWeight: 800;
 $secondaryWeight: 700;
 $tertiaryWeight: 600;
