--- a/src/Models/HeroPage/heroModel.scss
+++ b/src/Models/HeroPage/heroModel.scss
@@ -31,7 +31,7 @@
           font-size: 1.2rem;
           margin-bottom: 1.5rem;
           font-family: $secondaryFont;
-          color: #161641;
+          color: $secondaryColor;
         }
       }
   
