--- a/src/Styles/_variables.scss
+++ b/src/Styles/_variables.scss
@@ -1,9 +1,9 @@
-$primaryColor: "#F5F7FA";
-$secondaryColor: "#161641";
-$tertiaryColor: "#63D3C5";
-$quaternaryColor: "#717171";
-$quinaryColor: "#4D4D4D";
-$btnColor: "#3458EB";
+$primaryColor: #F5F7FA;
+$secondaryColor: #161641;
+$tertiaryColor: #63D3C5;
+$quaternaryColor: #717171;
+$quinaryColor: #4D4D4D;
+$btnColor: #3458EB;
 $primaryFont: 'Mulish', sans-serif;
 $secondaryFont: 'Inter', sans-serif;
 $primaryWeight: 800;
