--- a/src/Models/DemoPage/demoModel.scss
+++ b/src/Models/DemoPage/demoModel.scss
@@ -1,1 +1,28 @@
 @use '../../Styles/variables' as *;
+
+.demoModel {
+    display: flex;
+    justify-content: center; 
+    align-items: center; 
+    text-align: center; 
+    background-color: #f8f9fa; 
+  
+    &__content {
+      display: flex;
+      flex-direction: column; 
+      align-items: center; 
+      margin: 20px;
+    }
+  
+    &__title {
+      font-size: 40px;
+      font-weight: 600;
+      line-height: 1.8;
+      color: #333;
+      margin-bottom: 20px;
+      @media (max-width: 768px) {
+          font-size: 24px;
+      }
+    }
+  }
+  
